...
        case total24HVolume = "total24hVolume"
    }
}

extension Coin {
    static let bitCoinMocked = Coin(uuid: "Qwsogvtv82FCd",
                                    symbol: "BTC",
                                    name: "Bitcoin",
                                    iconURL: "https://cdn.coinranking.com/bOabBYkcX/bitcoin_btc.svg",
                                    marketCap: "1954122628099",
                                    price: "98558.0126594903",
                                    tier: 1,
                                    change: "1.64",
...
